# claude-code-memory-system

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
examples/: feedback-example.md  project-context.md  settings.example.json  user-preferences.md
hooks/: observe.py
rules/: auto-evolved.md
src/claude_memory/: __init__.py  analyzer.py  injector.py  installer.py
